# CodeRunner3000

./: Makefile  README.md  compose.yaml  docker-compose.yaml  package-lock.json
.github/workflows/: dockerize.yaml  infra.yaml  integration-tests.yaml  tests.yaml
db/: Dockerfile  init.sql
dind/: Dockerfile
docs/: NewLanguage.md  api.md
evaluator/: .env  Cargo.toml  Dockerfile  README.md
evaluator/config/: config.yaml  userspace.cfg
evaluator/images/: Dockerfile  Dockerfile-lua  Dockerfile.lua  config.yaml  evaluate.sh
evaluator/images/gcc/: Dockerfile
evaluator/images/lua/: Dockerfile-lua  evaluate.lua  evaluate.sh
evaluator/infra/: Makefile
evaluator/infra/languages/: config.toml
evaluator/infra/languages/go/: setup.sh
evaluator/infra/languages/lua/: setup.sh
evaluator/infra/languages/mjolnir/: setup.sh
evaluator/infra/languages/racket/: setup.sh
evaluator/scripts/: entrypoint.sh  setup.sh  setup_lua.sh  setup_mjolnir.sh  setup_racket.sh
evaluator/src/: docker.rs  eval.rs  links.rs  main.rs  nsjail.rs  spec.rs
integration_tests/: docker-compose-evaluator.yml  evaluator.yaml
integration_tests/evaluator_tests/: Dockerfile  conftest.py  test_bash.py  test_c.py  test_cpp.py  test_eval.py  test_go.py  test_haskell.py  test_js.py  test_links.py  test_lua.py  test_python.py  test_racket.py
runtime/: Cargo.toml  Dockerfile
runtime/src/: http.rs  main.rs
statserver/: Dockerfile  go.mod  main.go  redis.go
valkey/: Dockerfile  entrypoint.sh
valkey/configs/: links.tmpl.conf
website/: .dockerignore  .env  .env.production  .gitignore  .prettierrc  .prettierrc.toml  Dockerfile  README.md  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  tsconfig.json
website/conf/: nginx.conf  nginx.conf.template
website/scripts/: entrypoint.sh
website/src/: app.html  auth.py  (+4 more)
website2.0/: .env  bun.lockb  package.json  tsconfig.json
website_old/: .gitignore  Dockerfile  README.md
website_proxy/: Dockerfile  entrypoint.sh  nginx.conf  nginx.conf.template
(+67 files in other folders)
