[package]
name = "evaluator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
rand = "0.8"
hyper = { version = "0.14", features = ["full"] }
anyhow = "1.0.75"
futures = "0.3.29"
