[package]
name = "evaluator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
rand = "0.8"
anyhow = "1.0.75"
futures = "0.3.29"
metrics = "0.21.1"
lazy_static = "1.4.0"
prometheus-client = "0.22.0"
metrics-exporter-prometheus = "0.12.1"
metrics-util = "0.15.1"
serde_yaml = "0.9.27"
log = "0.4.20"
dotenv = "0.15.0"
env_logger = "0.10.1"
redis = { version = "0.25.4", features = ["connection-manager", "tokio-comp"] }
axum = { version = "0.7.5", features = ["tokio"] }
tower_governor = "0.4.2"
crc32fast = "1.4.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tower-http = { version = "0.6.6", features = ["trace"] }
